; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/test/src/extr_test_auto_policy.c_dummy_reorder_func.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/test/src/extr_test_auto_policy.c_dummy_reorder_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@chunk_oid = common dso_local global i8* null, align 8
@index_oid = common dso_local global i8* null, align 8
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32, i8*, i8*, i8*)* @dummy_reorder_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dummy_reorder_func(i8* %0, i8* %1, i32 %2, i8* %3, i8* %4, i8* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i8* %5, i8** %12, align 8
  %13 = load i8*, i8** %7, align 8
  store i8* %13, i8** @chunk_oid, align 8
  %14 = load i8*, i8** %8, align 8
  store i8* %14, i8** @index_oid, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load i32, i32* @InvalidOid, align 4
  %19 = load i32, i32* @InvalidOid, align 4
  %20 = call i32 @reorder_chunk(i8* %15, i8* %16, i32 1, i8* %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @reorder_chunk(i8*, i8*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
